Validates JSON objects against spec data models
-Create new data directory to hold data model spec text files copied from
the main spec document.

-Move the model_parser.py code the the lr/lib so that it can imported and us
in the pylons application to validate incoming documents before committing
them the database.

-Move the code that saves documents the the pylons model module.

-Add to tdevelopment.ini configuration info about the location of the
model spec files and the url of the couchdb server.

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -24,6 +24,12 @@ cache_dir = %(here)s/data
 beaker.session.key = lr
 beaker.session.secret = somesecret
 
+#Spec data models directory.
+models_spec_dir = %(here)s/data/models
+
+#CouchDB url
+couchdb.url = http://localhost:5984/
+
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
 # here:
