--- a/LR/development.ini
+++ b/LR/development.ini
@@ -29,6 +29,7 @@ models_spec_dir = %(here)s/data/models
 
 #CouchDB url
 couchdb.url = http://localhost:5984/
+couchdb.dbname = resource_data
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
