adding some additional configuration options for easy setup of node

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -29,7 +29,10 @@ models_spec_dir = %(here)s/data/models
 
 #CouchDB url
 couchdb.url = http://localhost:5984/
-couchdb.dbname = resource_data
+couchdb.db.resourcedata = resource_data
+couchdb.db.node = node
+couchdb.db.community = community
+couchdb.db.network = network
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
