--- a/LR/development.ini
+++ b/LR/development.ini
@@ -26,11 +26,26 @@ beaker.session.secret = somesecret
 
 #Spec data models directory.
 models_spec_dir = %(here)s/data/models
+spec.models.resource_data = %(here)s/data/models/resource_data
+spec.models.filter_description = %(here)s/data/models/filter_description
+spec.models.node_description= %(here)s/data/models/node_description
+spec.models.network_description = %(here)s/data/models/network_description
+spec.models.community_description= %(here)s/data/models/community_description
+
+# Initial configuration for Learning Registry Network node
+init.node.description =  %(here)s/data/init_config/node_description.json
+init.network.description = %(here)s/data/init_config/network_description.json
+init.community.description = %(here)s/data/init_config/community_description.json
+init.filter.description = %(here)s/data/init_config/filter_description.json
+
+
 
 #CouchDB url
 couchdb.url = http://localhost:5984/
 couchdb.db.resourcedata = resource_data
 couchdb.db.node = node
+couchdb.db.node.filter = filter
+couchdb.db.node.description = description
 couchdb.db.community = community
 couchdb.db.network = network
 
