--- a/LR/development.ini
+++ b/LR/development.ini
@@ -31,13 +31,14 @@ spec.models.filter_description = %(here)s/data/models/filter_description
 spec.models.node_description= %(here)s/data/models/node_description
 spec.models.network_description = %(here)s/data/models/network_description
 spec.models.community_description= %(here)s/data/models/community_description
+spec.models.status_description= %(here)s/data/models/status_description
 
 # Initial configuration for Learning Registry Network node
 init.node.description =  %(here)s/data/init_config/node_description.json
 init.network.description = %(here)s/data/init_config/network_description.json
 init.community.description = %(here)s/data/init_config/community_description.json
 init.filter.description = %(here)s/data/init_config/filter_description.json
-
+init.status.description = %(here)s/data/init_config/status_description.json
 
 
 #CouchDB url
