Add new single file node configuration

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -26,19 +26,19 @@ beaker.session.secret = somesecret
 
 #Spec data models directory.
 models_spec_dir = %(here)s/data/models
-spec.models.resource_data = %(here)s/data/models/resource_data
-spec.models.filter_description = %(here)s/data/models/filter_description
+spec.models.resource_data = %(here)s/data/models/resource_data_description
+spec.models.filter_description = %(here)s/data/models/node_filter_description
 spec.models.node_description= %(here)s/data/models/node_description
 spec.models.network_description = %(here)s/data/models/network_description
 spec.models.community_description= %(here)s/data/models/community_description
 spec.models.status_description= %(here)s/data/models/status_description
+spec.models.node_service_description = %(here)s/data/models/node_service_description
+spec.models.network_policy_description = %(here)s/data/models/network_distribution_policy_description
+spec.models.node_connectivity_description = %(here)s/data/models/node_connectivity_description
 
 # Initial configuration for Learning Registry Network node
-init.node.description =  %(here)s/data/init_config/node_description.json
-init.network.description = %(here)s/data/init_config/network_description.json
-init.community.description = %(here)s/data/init_config/community_description.json
-init.filter.description = %(here)s/data/init_config/filter_description.json
-init.status.description = %(here)s/data/init_config/status_description.json
+init.LRNode.config =  %(here)s/data/init_config/lrnodeconfig.py
+
 
 
 #CouchDB url
