--- a/LR/development.ini
+++ b/LR/development.ini
@@ -50,6 +50,8 @@ couchdb.db.node.description = description
 couchdb.db.community = community
 couchdb.db.network = network
 
+#TOS info
+tos.url = http://www.learningregistry.org/tos/
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
 # here:
