fixed bug in distribute, for when filter args aren't defined

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -11,7 +11,7 @@ smtp_server = localhost
 error_email_from = paste@localhost
 
 [server:main]
-use = egg:Flup#fcgi_thread
+use = egg:PasteScript#flup_fcgi_thread
 host = 127.0.0.1
 port = 5000
 
