--- a/install/nginx.conf
+++ b/install/nginx.conf
@@ -1,6 +1,6 @@
 
 #user  nobody;
-worker_processes  1;
+worker_processes  2;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -11,6 +11,7 @@ worker_processes  1;
 
 events {
     worker_connections  1024;
+    use epoll;
 }
 
 
