updated routing file to selectively turn on services based on weather the node is a gateway and obtain now streams data rather than sending one large string

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -4,7 +4,7 @@
 # The %(here)s variable will be replaced with the parent directory of this file
 #
 [DEFAULT]
-debug = true
+debug = false
 # Uncomment and replace with the address which should receive any error reports
 #email_to = you@yourdomain.com
 smtp_server = localhost
@@ -42,7 +42,7 @@ init.LRNode.config =  %(here)s/data/init_config/lrnodeconfig.py
 
 
 #CouchDB url
-couchdb.url = http://localhost:5984/
+couchdb.url = http://lrdev3.learningregistry.org:5984/
 couchdb.db.resourcedata = resource_data
 couchdb.db.node = node
 couchdb.db.node.filter = filter
