reset couchdb.url to localhost

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -42,7 +42,7 @@ init.LRNode.config =  %(here)s/data/init_config/lrnodeconfig.py
 
 
 #CouchDB url
-couchdb.url = http://lrdev3.learningregistry.org:5984/
+couchdb.url = http://localhost:5984/
 couchdb.db.resourcedata = resource_data
 couchdb.db.node = node
 couchdb.db.node.filter = filter
