Added option for not setting cookies

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -65,5 +65,6 @@ couchdb.db.network = network
 couchdb.db.node.filter = filter
 couchdb.db.node.description = description
 beaker.session.secret = somesecret
+beaker.session.use_cookies = false
 couchdb.db.community = community
 
