Delete LR.egg-info files and ignore all .egg-info
Folders ending in .egg-info are altered by setup tools/pip when
installing a package so those folders and their contents are ignored.
See
http://stackoverflow.com/questions/3719243/recommended-gitignore-file-for-python-projects
and
https://github.com/github/gitignore/blob/master/Python.gitignore
for more information.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 *paster.pid
 LR/tests/*.htm
 geanyproject
+
+# these files are altered when installing the package, so ignore them
+MANIFEST
+*.egg-info
+
+# the locally generated config file
+LR/config.ini
