--- a/LR/production.ini
+++ b/LR/production.ini
@@ -1,60 +1,68 @@
-#
-# LR - Pylons configuration
-#
-# The %(here)s variable will be replaced with the parent directory of this file
-#
 [DEFAULT]
-debug = true
-email_to = you@yourdomain.com
-smtp_server = localhost
+debug = false
 error_email_from = paste@localhost
+smtp_server = localhost
 
-[server:main]
-use = egg:Flup#scgi_thread
-host = 0.0.0.0
-port = 5000
-
-[app:main]
-use = egg:LR
-full_stack = true
-static_files = true
-
-cache_dir = %(here)s/data
-beaker.session.key = lr
-beaker.session.secret = l5TAQ2DB3/X57bVTrL7Z1/yHC
-app_instance_uuid = {a5b2db6b-f9b7-4f39-9e2d-d37a8351019e}
-
-# If you'd like to fine-tune the individual locations of the cache data dirs
-# for the Cache data, or the Session saves, un-comment the desired settings
-# here:
-#beaker.cache.data_dir = %(here)s/data/cache
-#beaker.session.data_dir = %(here)s/data/sessions
-
-# WARNING: *THE LINE BELOW MUST BE UNCOMMENTED ON A PRODUCTION ENVIRONMENT*
-# Debug mode will enable the interactive debugging tool, allowing ANYONE to
-# execute malicious code after an exception is raised.
-set debug = false
-
-
-# Logging configuration
 [loggers]
-keys = root
+keys = root, routes, lr
+
+[formatter_generic]
+datefmt = %H:%M:%S
+format = %(asctime)s,%(msecs)03d %(levelname)-5.5s [%(name)s] [%(threadName)s] %(message)s
+
+[handler_console]
+formatter = generic
+args = (sys.stderr,)
+class = StreamHandler
+level = NOTSET
 
 [handlers]
 keys = console
+
+[logger_lr]
+handlers =
+qualname = lr
+level = ERROR
 
 [formatters]
 keys = generic
 
 [logger_root]
-level = INFO
 handlers = console
+level = INFO
 
-[handler_console]
-class = StreamHandler
-args = (sys.stderr,)
-level = NOTSET
-formatter = generic
+[logger_routes]
+handlers =
+qualname = routes.middleware
+level = INFO
 
-[formatter_generic]
-format = %(asctime)s %(levelname)-5.5s [%(name)s] [%(threadName)s] %(message)s
+[server:main]
+use = egg:Flup#fcgi_thread
+host = 127.0.0.1
+port = 5000
+
+[app:main]
+spec.models.node_service_description = %(here)s/data/models/node_service_description
+couchdb.db.node = node
+couchdb.db.resourcedata = resource_data
+spec.models.node_description = %(here)s/data/models/node_description
+spec.models.resource_data = %(here)s/data/models/resource_data_description
+models_spec_dir = %(here)s/data/models
+tos.url = http://www.learningregistry.org/tos/
+couchdb.url = http://127.0.0.1:5984
+spec.models.network_policy_description = %(here)s/data/models/network_distribution_policy_description
+use = egg:LR
+spec.models.status_description = %(here)s/data/models/status_description
+spec.models.filter_description = %(here)s/data/models/node_filter_description
+full_stack = true
+static_files = true
+cache_dir = %(here)s/data
+beaker.session.key = lr
+spec.models.node_connectivity_description = %(here)s/data/models/node_connectivity_description
+spec.models.community_description = %(here)s/data/models/community_description
+spec.models.network_description = %(here)s/data/models/network_description
+couchdb.db.network = network
+couchdb.db.node.filter = filter
+couchdb.db.node.description = description
+beaker.session.secret = somesecret
+couchdb.db.community = community
