Disabling cookie setting.

--- a/LR/development.ini
+++ b/LR/development.ini
@@ -66,3 +66,4 @@ couchdb.db.node.filter = filter
 couchdb.db.node.description = description
 beaker.session.secret = somesecret
 couchdb.db.community = community
+beaker.session.use_cookies = false
