source cleanup, make harvest stream like obtain, and fixed some typos in helpers

--- a/utils/testconfig.ini
+++ b/utils/testconfig.ini
@@ -1,7 +1,7 @@
 
 [upload]
-root_path=/home/wegrata/metadata/LearningRegistryData/metadata
-publish_url=http://lrdev1.learningregistry.org/publish
-
+root_path=/home/wegrata/LearningRegistryData/metadata
+publish_url=http://localhost/publish
+sword_url=http://localhost/sword
 [fix]
-root_path=/home/wegrata/metadata/LearningRegistryData/metadata
+root_path=/home/wegrata/LearningRegistryData/metadata
