fixed map file and typo in harvest

--- a/utils/testconfig.ini
+++ b/utils/testconfig.ini
@@ -1,7 +1,7 @@
 
 [upload]
 root_path=/home/wegrata/LearningRegistryData/metadata
-publish_url=http://ec2-50-17-87-122.compute-1.amazonaws.com/publish
+publish_url=http://localhost/publish
 sword_url=http://ec2-50-17-87-122.compute-1.amazonaws.com/sword
 [fix]
 root_path=/home/wegrata/LearningRegistryData/metadata
