--- a/etc/nginx/sites-available/ssl-learning_registry.conf
+++ b/etc/nginx/sites-available/ssl-learning_registry.conf
@@ -28,7 +28,7 @@
         #Please replace with the approciate certificate file
         ssl_certificate        ssl-certificate/learningregistry_certificate.crt;  
          
-        #Please replaice with thet application key
+        #Please replace with thet application key
         ssl_certificate_key ssl-certificate-key/learningregistry_key.key; 
         
         keepalive_timeout  140;
