Update nginx configuration files to use uwsgi

--- a/etc/nginx/sites-available/ssl-learning_registry.conf
+++ b/etc/nginx/sites-available/ssl-learning_registry.conf
@@ -33,6 +33,9 @@
         
         keepalive_timeout  140;
         
+        #Increase the client_max_body_size to avoid couch replication timeout        
+        client_max_body_size 10G;
+
          ## Strict Transport Security (ForceHTTPS)
         add_header Strict-Transport-Security "max-age=2592000; includeSubdomains";
 
@@ -47,7 +50,8 @@
         error_log      /var/log/nginx/learningregistry.error.log info;
     
         location / {
-            include     learningregistry_cgi/default;
+             uwsgi_pass 127.0.0.1:5000;
+             include learningregistry_cgi/uwsgi_params;
             }
         location /publish{
             #For publish use the default 
@@ -57,12 +61,17 @@
             auth_basic	"Learning Registry Publish Authentitication";
             auth_basic_user_file	httpasswd/lr_publish.passwd;
             
-            include     learningregistry_cgi/default;
+            uwsgi_pass 127.0.0.1:5000;
+            include learningregistry_cgi/uwsgi_params;
+
         }
         
         # Proxy access the the resource_data database 
         location /resource_data{
            
+                # For resource_data access don't log the data.
+                access_log   /var/log/nginx/learningregistry.access.log lr_log_query;
+                
                 # Uncomment to following two lines to enable http basic auth for
                 # couchdb resource_data access.
                 auth_basic "Learning Registry Resource Data Authentication";
