Add server directive for localhost access

--- a/etc/nginx/sites-available/ssl-learning_registry.conf
+++ b/etc/nginx/sites-available/ssl-learning_registry.conf
@@ -1,3 +1,15 @@
+## Add server to handle localhost distribute or any access through localhost
+server{
+        listen          80;
+        server_name     localhost;
+        location / {
+             uwsgi_pass 127.0.0.1:5000;
+             include uwsgi_params;
+             uwsgi_param     SCRIPT_NAME /;
+            }
+}
+
+
 ## Redirect http to https
   server {
       add_header Cache-Control "public, must-revalidate";
@@ -5,9 +17,9 @@
       error_log   /var/log/nginx/learningregistry.error.log info;
       expires     90d;
       listen        80;
-      #The server name  must updated the learning registry node name
       
-      server_name 192.168.0.101;
+      #The server name  must updated the learning registry node name
+      #server_name 192.168.0.101;
 
       location / {
         #this rules the regular expression should match the lr node name
