--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "utils/LRSignature"]
 	path = utils/LRSignature
-	url = git://github.com/LearningRegistry/LRSignature.git
+	url = https://github.com/LearningRegistry/LRSignature.git
