--- a/etc/nginx/sites-available/ssl-learning_registry.conf
+++ b/etc/nginx/sites-available/ssl-learning_registry.conf
@@ -75,7 +75,9 @@ server{
             
             uwsgi_pass 127.0.0.1:5000;
             include learningregistry_cgi/uwsgi_params;
-
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Ssl on;
         }
         
         # Proxy access the the resource_data database 
