--- a/auth-server/Gemfile
+++ b/auth-server/Gemfile
@@ -5,3 +5,8 @@ gem 'rails', '4.2.5.2'
 gem 'rails-api'
 
 gem 'spring', group: :development
+
+# Authentication
+gem 'omniauth', '~> 1.3'
+gem 'omniauth-google-oauth2'
+gem 'omniauth-amazon', github: 'nitin007/omniauth-amazon'
