--- a/auth-server/Gemfile
+++ b/auth-server/Gemfile
@@ -10,3 +10,6 @@ gem 'spring', group: :development
 gem 'omniauth', '~> 1.3'
 gem 'omniauth-google-oauth2'
 gem 'omniauth-amazon', github: 'nitin007/omniauth-amazon'
+
+# CouchDB
+gem 'couchrest_model', '~> 2.0'
