--- a/auth-server/Gemfile
+++ b/auth-server/Gemfile
@@ -7,6 +7,7 @@ gem 'rails-api'
 gem 'spring', group: :development
 
 # Authentication
+gem 'rack-cors', '~> 0.4'
 gem 'omniauth', '~> 1.3'
 gem 'omniauth-google-oauth2'
 gem 'omniauth-amazon', github: 'nitin007/omniauth-amazon'
