--- a/auth-server/config/secrets.yml
+++ b/auth-server/config/secrets.yml
@@ -3,6 +3,8 @@ default: &default
   google_client_secret: <%= ENV["GOOGLE_CLIENT_SECRET"] %>
   amazon_client_id: <%= ENV["AMAZON_CLIENT_ID"] %>
   amazon_client_secret: <%= ENV["AMAZON_CLIENT_SECRET"] %>
+  approval_sender: user@example.org
+  approval_receiver: list@example.org
 
 development:
   <<: *default
@@ -17,3 +19,5 @@ test:
 production:
   <<: *default
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  approval_sender: lr-approval@gmail.com
+  approval_receiver: lr-approval@googlegroups.com
