--- a/auth-server/Gemfile
+++ b/auth-server/Gemfile
@@ -10,7 +10,7 @@ gem 'sass-rails', '~> 5.0'
 gem 'rack-cors', '~> 0.4'
 gem 'omniauth', '~> 1.3'
 gem 'omniauth-google-oauth2'
-gem 'omniauth-amazon', github: 'nitin007/omniauth-amazon'
+gem 'omniauth-amazon', '~> 1.0'
 
 # CouchDB
 gem 'couchrest_model', '~> 2.0'
