--- a/auth-server/config/secrets.yml
+++ b/auth-server/config/secrets.yml
@@ -3,6 +3,8 @@ default: &default
   google_client_secret: <%= ENV["GOOGLE_CLIENT_SECRET"] %>
   amazon_client_id: <%= ENV["AMAZON_CLIENT_ID"] %>
   amazon_client_secret: <%= ENV["AMAZON_CLIENT_SECRET"] %>
+  windowslive_client_id: <%= ENV["WINDOWSLIVE_CLIENT_ID"] %>
+  windowslive_client_secret: <%= ENV["WINDOWSLIVE_CLIENT_SECRET"] %>
   approval_sender: user@example.org
   approval_receiver: list@example.org
 
