Log the users into CouchDB when session is created
All users share the same master password, so when
they are logged into the auth server, a session is
opened in CouchDB and the 'AuthSession' cookie is
finally sent to the client.

--- a/auth-server/config/secrets.yml
+++ b/auth-server/config/secrets.yml
@@ -5,6 +5,7 @@ default: &default
   amazon_client_secret: <%= ENV["AMAZON_CLIENT_SECRET"] %>
   windowslive_client_id: <%= ENV["WINDOWSLIVE_CLIENT_ID"] %>
   windowslive_client_secret: <%= ENV["WINDOWSLIVE_CLIENT_SECRET"] %>
+  couchdb_master_password: test_password
   approval_sender: user@example.org
   approval_receiver: list@example.org
 
@@ -21,5 +22,6 @@ test:
 production:
   <<: *default
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  couchdb_master_password: <%= ENV["COUCHDB_MASTER_PASSWORD"] %>
   approval_sender: lr-approval@gmail.com
   approval_receiver: lr-approval@googlegroups.com
