make acct approval & lrmi validation optional

--- a/auth-server/config/secrets.yml
+++ b/auth-server/config/secrets.yml
@@ -6,6 +6,7 @@ default: &default
   windowslive_client_id: <%= ENV["WINDOWSLIVE_CLIENT_ID"] %>
   windowslive_client_secret: <%= ENV["WINDOWSLIVE_CLIENT_SECRET"] %>
   couchdb_master_password: test_password
+  approval_enabled: false
   approval_sender: user@example.org
   approval_receiver: list@example.org
 
